// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraction Snapshots No props 1`] = `
<div
  className="sc-hKgILt ceOgG"
>
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <span
    className="sc-bdfBwQ eJHIxM"
  >
    5
     / 
    5
  </span>
</div>
`;

exports[`Fraction Snapshots Value 1`] = `
<div
  className="sc-hKgILt ceOgG"
>
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <span
    className="sc-bdfBwQ eJHIxM"
  >
    3
     / 
    5
  </span>
</div>
`;

exports[`Fraction Snapshots Value over Max 1`] = `
<div
  className="sc-hKgILt ceOgG"
>
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <span
    className="sc-bdfBwQ eJHIxM"
  >
    12
     / 
    10
  </span>
</div>
`;

exports[`Fraction Snapshots With Max 1`] = `
<div
  className="sc-hKgILt ceOgG"
>
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <span
    className="sc-bdfBwQ eJHIxM"
  >
    10
     / 
    10
  </span>
</div>
`;

exports[`Fraction Snapshots With children 1`] = `
<div
  className="sc-hKgILt ceOgG"
>
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <div
    className="sc-gsTCUz ivpcmF"
    onClick={[Function]}
  />
  <span
    className="sc-bdfBwQ eJHIxM"
  >
    10
     / 
    10
  </span>
</div>
`;

exports[`Fraction Snapshots invalid Value 1`] = `
<div
  className="sc-hKgILt ceOgG"
>
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <div
    className="sc-dlfnbm gWfEEP"
    onClick={[Function]}
  />
  <span
    className="sc-bdfBwQ eJHIxM"
  >
     / 
    10
  </span>
</div>
`;
